--- a/notebooks/E6LocalMap.ipynb
+++ b/notebooks/E6LocalMap.ipynb
@@ -61,6 +61,7 @@
     "# You might want to play with, ie disabling these\n",
     "X /= np.linalg.norm(X, axis=1)[:, None]\n",
     "\n",
+    "# A first rank truncation using PCA helps smooth the noise\n",
     "pca = PCA(256)\n",
     "Xt = pca.fit_transform(X)\n",
     "#Xt /= np.linalg.norm(Xt, axis=1)[:, None] # <- same here\n",
@@ -129,7 +130,7 @@
     "\n",
     "\n",
     "# Sigmoid -> power -> marginal sum over selected points\n",
-    "#neigh_score = 1/(1 + np.exp(-neigh_score))\n",
+    "#neigh_score = 1/(1 + np.exp(-temp * neigh_score))\n",
     "#neigh_score = (neigh_score ** lp).mean(axis=1) ** (1/lp)\n",
     "\n",
     "# Same, more stable?\n",
